Updated Photos in History Section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                         <li class="nav-item"><a class="nav-link" href="#ourmark">Our Mark</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#history">History</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#jobs">Work</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -188,7 +189,7 @@
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>1960's</h4>
@@ -198,7 +199,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/6.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>1970's</h4>
@@ -208,7 +209,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/5.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>1980's</h4>
@@ -218,7 +219,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>1990's</h4>
@@ -282,13 +283,20 @@
                               <th scope="row" class="p-3">
                                 <i class="fa-solid fa-screwdriver-wrench iconFill"></i>
                               </th>
-                              <td><a href="#contact"><strong>Maintenance Position</strong></a></td>
-                              <td class="descCell">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque,
-                                 auctor sit amet aliquam vel, ullamcorper sit amet ligula. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.
-                                  Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet
-                                   aliquam vel, ullamcorper sit amet ligula. Nulla porttitor accumsan tincidunt. Vestibulum ac diam sit amet quam vehicula
-                                    elementum sed sit amet dui. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Praesent sapien massa, convallis
-                                     a pellentesque nec, egestas non nisi. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.</td>
+                              <td><a href="#contact"><strong>Maintenance Technician</strong></a></td>
+                              <td class="descCell fs-6">
+                                <p>Manufacturing Facility is seeking an energetic individual for a Maintenance position.
+                                 The right candidate must be a critical thinker that can get the job done with safety, efficiency and maintaining
+                                  a good work culture being the primary driving factors.</p>
+                                <h3>Requirements:</h3>
+                                <ul>
+                                    <li>5 years' experience as an industrial mechanic in a high-speed manufacturing or technical environment required.</li>
+                                    <li>Must have excellent interpersonal and communication skills, be highly motivated and responsible, and work well within a team environment.</li>
+                                    <li>Able to diagnose, repair machine malfunctions, perform routine maintenance and troubleshooting of conveyors, hydraulics, pneumatics, manufacturing systems and controls, and electrical knowledge 480V control.</li>
+                                    <li>Must have good theoretical and applied understanding of mechanical and electrical theory, production line control, instrumentation, and the manufacturing process.</li>
+                                    <li>Contact us for more requirements...</li>
+                                </ul>
+                                </td>
                               <td class="p-3"><a href="#contact"><i class="fa-solid fa-file-signature iconFill"></i></a></td>
                             </tr>
                           </tbody>
